[gd_scene load_steps=22 format=3 uid="uid://c6fd0g2fb8vxn"]

[ext_resource type="Script" path="res://assets/enemies/ranged_enemy/ranged_enemy.gd" id="1_bnlcu"]
[ext_resource type="Texture2D" uid="uid://dbufuttn77rax" path="res://textures/enemy/Enemy-jump/Enemy-Jump-3.png" id="2_5hqdy"]
[ext_resource type="Texture2D" uid="uid://dqdorgkowwwe" path="res://textures/enemy/Enemy-standing/Enemy-standing-1.png" id="3_ngshm"]
[ext_resource type="Texture2D" uid="uid://wkk2br48dib4" path="res://textures/enemy/Enemy-standing/Enemy-standing-2.png" id="4_iciyl"]
[ext_resource type="Texture2D" uid="uid://mjlyb71xb3xk" path="res://textures/enemy/Enemy-standing/Enemy-standing-3.png" id="5_g37cw"]
[ext_resource type="Texture2D" uid="uid://n1ik7660hf2u" path="res://textures/enemy/Enemy-standing/Enemy-standing-4.png" id="6_vgsd5"]
[ext_resource type="Texture2D" uid="uid://nq0ik1bfqsg1" path="res://textures/enemy/Enemy-jump/Enemy-Jump-1.png" id="7_j0fjg"]
[ext_resource type="Texture2D" uid="uid://bj1tx8th44nu4" path="res://textures/enemy/Enemy-jump/Enemy-Jump-2.png" id="8_w7047"]
[ext_resource type="Texture2D" uid="uid://ca0ax2seguqsr" path="res://textures/enemy/Enemy-walking/Enemy-Walking-1.png" id="9_xymxd"]
[ext_resource type="Texture2D" uid="uid://dutncl25dp714" path="res://textures/enemy/Enemy-walking/Enemy-Walking-2.png" id="10_mfn83"]
[ext_resource type="Texture2D" uid="uid://cb8rstltlsu2o" path="res://textures/enemy/Enemy-walking/Enemy-Walking-3.png" id="11_mm2k7"]
[ext_resource type="Texture2D" uid="uid://d3kuyinfxqwaa" path="res://textures/enemy/Enemy-walking/Enemy-Walking-4.png" id="12_kw3ju"]
[ext_resource type="Texture2D" uid="uid://d4a8fdpwt5hym" path="res://textures/enemy/Enemy-walking/Enemy-Walking-5.png" id="13_kmwhj"]
[ext_resource type="Texture2D" uid="uid://b7jovpiw106hy" path="res://textures/enemy/Enemy-walking/Enemy-Walking-6.png" id="14_ywqj4"]
[ext_resource type="Texture2D" uid="uid://b15g8ly4t6bg6" path="res://textures/enemy/Enemy-walking/Enemy-Walking-7.png" id="15_6k66b"]
[ext_resource type="Texture2D" uid="uid://g6yj62vifdor" path="res://textures/enemy/Enemy-walking/Enemy-Walking-8.png" id="16_5v3ef"]
[ext_resource type="PackedScene" uid="uid://dvkwtd5bxredm" path="res://assets/weapons/enemy_blaster/enemy_blaster.tscn" id="17_hm002"]
[ext_resource type="PackedScene" uid="uid://cpb5mre4u13vt" path="res://assets/enemies/navigation_component.tscn" id="18_tsmt8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_d2qwg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5hqdy")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ngshm")
}, {
"duration": 1.0,
"texture": ExtResource("4_iciyl")
}, {
"duration": 1.0,
"texture": ExtResource("5_g37cw")
}, {
"duration": 1.0,
"texture": ExtResource("6_vgsd5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_j0fjg")
}, {
"duration": 1.0,
"texture": ExtResource("8_w7047")
}, {
"duration": 1.0,
"texture": ExtResource("2_5hqdy")
}],
"loop": true,
"name": &"jump",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_xymxd")
}, {
"duration": 1.0,
"texture": ExtResource("10_mfn83")
}, {
"duration": 1.0,
"texture": ExtResource("11_mm2k7")
}, {
"duration": 1.0,
"texture": ExtResource("12_kw3ju")
}, {
"duration": 1.0,
"texture": ExtResource("13_kmwhj")
}, {
"duration": 1.0,
"texture": ExtResource("14_ywqj4")
}, {
"duration": 1.0,
"texture": ExtResource("15_6k66b")
}, {
"duration": 1.0,
"texture": ExtResource("16_5v3ef")
}],
"loop": true,
"name": &"walk",
"speed": 16.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ex46t"]
bg_color = Color(0, 0, 0, 0.709804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3l68f"]
bg_color = Color(1.5, 0.255, 0.255, 1)

[node name="ranged_enemy" type="CharacterBody2D" groups=["enemies"]]
scale = Vector2(0.5, 0.5)
collision_layer = 4
collision_mask = 9
floor_constant_speed = true
script = ExtResource("1_bnlcu")
idle_speed = 20.0
chase_speed = 65.0
MAX_HEALTH = 80.0
dropped_experience = 75.0
dropped_ammo = 8
detection_range = 150.0
attack_range = 125.0
jump_height = 45.0
jump_descent = 0.25
jump_peak = 0.35
reaction_time = 0.2
memory_time = 20.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -10)
polygon = PackedVector2Array(-8, -6, 0, -12, 8, -6, 8, 18, 0, 20.5, -8, 18)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(0.125, 0.125)
sprite_frames = SubResource("SpriteFrames_d2qwg")
animation = &"idle"
offset = Vector2(72, 0)

[node name="enemy_blaster" parent="AnimatedSprite2D" instance=ExtResource("17_hm002")]

[node name="aiming_ray" type="RayCast2D" parent="AnimatedSprite2D/enemy_blaster"]
position = Vector2(112, -20)
scale = Vector2(8, 8)
target_position = Vector2(125, 0)
collision_mask = 2
hit_from_inside = true

[node name="healthbar" type="ProgressBar" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -31.0
offset_right = 10.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ex46t")
theme_override_styles/fill = SubResource("StyleBoxFlat_3l68f")
value = 44.99
show_percentage = false

[node name="damage_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="health_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="navigation_component" parent="." instance=ExtResource("18_tsmt8")]
point_amount = 50.0

[node name="navigation_timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="right_short" type="RayCast2D" parent="."]
visible = false
position = Vector2(4, -10)
target_position = Vector2(0, 7)

[node name="left_short" type="RayCast2D" parent="."]
visible = false
position = Vector2(-4, -10)
target_position = Vector2(0, 7)

[connection signal="timeout" from="navigation_timer" to="." method="update_path"]
